# OptiKlavi

./: .gitignore  CMakeDevSettingsTemplate.cmake  CMakeLists.txt  DISTRIBUTION_GUIDE.md  Directory.Build.props  README.md  TODO.md
corpora/: README.txt
managed/: Directory.Packages.props  OptiKlavi.sln
managed/OptiKlavi.UI/: OptiKlavi.UI.sln  global.json
managed/OptiKlavi.UI/.run/: OptiKlavi.UI.run.xml
managed/OptiKlavi.UI/OptiKlavi.UI/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  OptiKlavi.UI.csproj  UnsafeByteBufferAllocator.cs  app.manifest
managed/OptiKlavi.UI/OptiKlavi.UI/Properties/: launchSettings.json
managed/OptiKlavi.UI/OptiKlavi.UI/Strings/en/: Resources.resw
native/: CMakeLists.txt
native/include/: export_header.h
native/src/: grams.cpp
schemas/: CMakeLists.txt  frequency_map.fbs
